Gửi thông báo + Quản lý user + Update CSS Template + Jquery
Gửi thông báo v1.0
Quản lý user v1.0
Update Metro CSS
Update Bootstrap JS
Update Jquery 1.4.1

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -25,6 +25,10 @@
 	background-color:#009688;
 	margin-top: 15px;
 }
+.search_user_result {
+	padding-top: 5px;
+    padding-bottom: 5px;
+}
 .customtopmenu {
 	background-color:transparent;
 	margin-left: 450px;
